@@ -10,7 +10,8 @@ Repository head::
      Added Content-Path and Content-Name support to msgin --create.
      Added =E selector for branch root commits.
      Added "clone" command.
-     Command arguments can now be "-quoted strinds containubg whitespace.
+     Command arguments can now be "-quoted strinds containing whitespace.
+     Graceful recovery frrom transcode errors.
 
 4.38: 2023-06-14::
      Experimental Perforce (p4) mirroring support in repotool.
